# rebbitmq

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
RPC/: client.py  server.py
default/: consumer.py  producer.py
direct/: publisher.py  subscriber.alarmraiser.py  subscriber.filewriter.py  subscriber.screenprint.py
fanout/: publisher.py  subscriber.py
reliablecommunication/: publisher.py  subscriber.py
topic/: publisher.py  subscriber.a3actiontaker.py  subscriber.allwarningsfromc2.py  subscriber.errorhandling.py
